Realizados cambios sustanciales de la API debido a un fallo con conexion al SGE